# trx

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  byt.release.toml  install.sh  justfile  release.toml  sgconfig.yml
.ast-grep/rules/: rust-no-clippy-allow.yml  rust-no-debug-todo.yml  rust-no-unwrap-expect.yml
.claude/: settings.local.json
.github/workflows/: release.yml
.pi/: settings.json
.pi/todos/: 019e79fb-f865-75ac-b8bd-83027b1cebec.json  276eb28b-daf0-4760-9efc-5173eb2f5965.json  2a64fa29-8b61-4f51-9acb-a39142da9abf.json  a46a32c4-3bab-413c-a4b1-f21ab22158fa.json  f0f7a5b1-134d-434a-b22a-2df9f374ef33.json
.trx/: ISSUES.md  config.toml  events.jsonl  issues.jsonl
.trx/crdt/: myprefix-6wze.automerge  trx-4f80.automerge  trx-4td6.automerge  trx-7eq.1.automerge  trx-7eq.2.automerge  trx-7eq.3.automerge  trx-7eq.automerge  trx-80by.automerge  trx-af3.1.automerge  trx-af3.2.automerge  trx-af3.3.automerge  trx-af3.4.automerge  trx-af3.automerge  trx-b7x3.automerge  trx-bqnp.automerge  trx-btfs.automerge  trx-bwt9.automerge  trx-cgs7.automerge  trx-f4ck.automerge  trx-gexn.automerge  trx-gt71.automerge  trx-hyv9.automerge  trx-jn7s.automerge  trx-jtmw.automerge  trx-kx6q.automerge  trx-mb7y.automerge  trx-msj1.automerge  trx-ne4f.automerge  trx-ned.1.automerge  trx-ned.2.automerge  trx-ned.3.automerge  trx-ned.4.automerge  trx-ned.5.automerge  trx-ned.6.automerge  trx-ned.7.automerge  trx-ned.8.automerge  trx-ned.9.automerge  trx-ned.automerge  trx-nst7.automerge  trx-p7y6.automerge  (+16 more)
crates/trx-api/: Cargo.toml
crates/trx-cli/: Cargo.toml
crates/trx-core/: Cargo.toml
crates/trx-mcp/: Cargo.toml
examples/: config.schema.json  config.toml
skills/trx/: SKILL.md
(+17 files in other folders)
