[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["byteowlz"]
license = "MIT"
repository = "https://github.com/byteowlz/trx"
description = "Minimal git-backed issue tracker with TUI viewer"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1.43", features = ["full"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
base32 = "0.5"
sha2 = "0.10"
dirs = "6.0"
thiserror = "2.0"
anyhow = "1.0"
colored = "3.0"
tabled = "0.17"

# Graph analysis (for viewer)
petgraph = "0.7"

# Workspace-wide clippy linting configuration
# These rules are enforced across all crates to maintain code quality
[workspace.lints.rust]
dead_code = "allow"
unused_imports = "allow"

[workspace.lints.clippy]
# Style and correctness
collapsible_if = "warn"
collapsible_else_if = "warn"
needless_return = "warn"
needless_borrow = "warn"
clone_on_copy = "warn"
single_char_add_str = "warn"
manual_strip = "warn"
manual_flatten = "warn"
unnecessary_lazy_evaluations = "warn"
unnecessary_map_or = "warn"
io_other_error = "warn"
single_match = "warn"

# Performance
cloned_instead_of_copied = "warn"
inefficient_to_string = "warn"

# Pedantic (stricter)
ptr_arg = "warn"
derivable_impls = "warn"

# These are intentionally allowed
too_many_arguments = "allow"
type_complexity = "allow"
module_inception = "allow"
